@@ -5,6 +5,7 @@ test_dependencies[] = pathauto
 test_dependencies[] = redirect
 test_dependencies[] = token
 test_dependencies[] = transliteration
+configure = admin/config/media/file-system/filefield-paths
 core = 7.x
 
 
